syntax = "proto3";

package com.demo.proto;

option java_multiple_files = true;
option java_package = "com.demo.proto";
option java_outer_classname = "HelloWorldProto";

service MyService {
    // unary call
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    //server stream
    rpc ListOrder(Buyer) returns (stream OrderInfo){}
    //client stream
    rpc AddToCart(stream ProductInfo) returns (AddCartReply){}
    //double
    rpc BatchDeduct(stream ProductInfo)returns (stream AddCartReply){}
}


message AddCartReply{
    int32  code =1;
    string message = 2;
}

message ProductInfo {
    int32  productId=1;
    int32  productNum =2;
}

message Buyer {
    int32  buyerId=1;
}

message OrderInfo{
    int32  orderId=1;
    int32  productId=2;
    int64  orderTime=3;
    string remark =4;
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
